  * apt-pkg/sourcelist.{cc,h}:
    - add pkgSourceList::GetLastModifiedTime() helper
  * apt-pkg/pkgcachegen.{cc,h}:
    - use ref-to-ptr semantic in NewDepends() to ensure that the   
      libapt does not segfault if the cache is remapped in between
      (LP: #812862)
  * test/integration/test-hashsum-verification:
    - add regression test for hashsum verification

 -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200

apt (0.8.15.5) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/deb/deblistparser.cc:
    - do not assume that the last char on a line is a \n (Closes: #633350)

 -- Michael Vogt <mvo@debian.org>  Thu, 28 Jul 2011 16:49:15 +0200

apt (0.8.15.4) unstable; urgency=low

  [ David Miller ]
  * apt-pkg/contrib/sha1.cc:
    - fix illegally casts of on-stack buffer to a type requiring more
      alignment than it has resulting in segfaults on sparc (Closes: #634696)

  [ Michael Vogt ]
  * apt-pkg/contrib/cdromutl.cc:
    - fix escape problem when looking for the mounted devices
  * apt-pkg/contrib/strutl.{h,cc}, test/libapt/strutil_test.cc:
    - add new DeEscapeString() similar to DeQuoteString but
      unescape character escapes like \0XX and \xXX (plus added
      test)
  * refresh po/*
  
 -- Michael Vogt <mvo@debian.org>  Tue, 26 Jul 2011 12:12:27 +0200

apt (0.8.15.3) unstable; urgency=low

  [ Michael Vogt ]
  * apt-pkg/acquire-item.cc:
    - improve error message for a expired Release file
  * apt-pkg/algorithms.cc:
    - Hold back packages that would enter "policy-broken" state on upgrade
      when doing a "apt-get upgrade"
  * cmdline/apt-get.cc:
    - fix missing download progress in apt-get download

  [ David Kalnischkies ]
  * apt-pkg/pkgcachegen.cc:
    - fallback to memory if file is not writeable even if access()
      told us the opposite before (e.g. in fakeroot 1.16) (Closes: #630591)
  * doc/sources.list.5.xml:
    - document available [options] for sources.list entries (Closes: 632441)